# TEE-Capability

./: .clang-format  CMakeLists.txt  README.md
communication.bak/include/: Softbus.h
communication/include/: Serialization.h
include/: ClientServerTypes.h  DDSClient.h  DDSServer.h  Serialization.h  Softbus.h  common.h  distributed_tee.h  dtee_sdk.h
service/communication_machanism/: README.md
service/communication_machanism/DDS/src/: DDSClient.cpp  DDSServer.cpp  Util.cpp
service/communication_machanism/dsoftbus/include/: DSoftbusClient.h  DSoftbusServer.h
service/communication_machanism/dsoftbus/src/: DSoftbusCommon.c
service/demo/CallRemoteEnclaveService/: CMakeLists.txt  main.cpp
service/demo/MigrateLocalEnclaveService/: CMakeLists.txt  README.md  main.cpp
service/demo/libdtee/: CMakeLists.txt  distributed_tee.cpp  distributed_tee.h
service/enclave/: README.md
service/enclave/interface/: EnclaveEngine.h
service/enclave/tee_framework/penglai/include/: elf.h  param.h  penglai-enclave.h
service/enclave/tee_framework/penglai/include/enclave_demo/: face_recognition_shared_param.h  run_enclave.h
service/enclave/tee_framework/penglai/src/: EnclaveEngine.cpp  elf.cpp  param.cpp  penglai-enclave.cpp
service/enclave/tee_framework/penglai/src/enclave_demo/: Makefile  face_recognition_entry.c  run_enclave.cpp
src/communication_machanism/DDS/include/: DDSClient.h  Util.h
src/communication_machanism/DDS/src/: ClientServerTypes.cpp  DDSClient.cpp  DDSServer.cpp
src/communication_machanism/dsoftbus/include/: DSoftbusCommon.h  defaults.h
src/communication_machanism/dsoftbus/src/: DSoftbusClient.cpp  DSoftbusServer.cpp
src/core/libdtee/: CMakeLists.txt  README.md  distributed_tee.cpp
src/core/libdtee/gm/: CMakeLists.txt
